--- a/pages/OrderDetails/OrderDetails.wxss
+++ b/pages/OrderDetails/OrderDetails.wxss
@@ -1,4 +1,5 @@
 .container{
+	min-height: 100vh;
 	background: #eeeeee;
 	padding-top: 17rpx;
 }
@@ -63,9 +64,11 @@ image{
 	border-bottom: 1px solid #eeeeee;
 }
 .goodsImg{
-	width: 138rpx;
+	/* width: 138rpx;
 	height: 138rpx;
-	border: 1px solid #d2d2d2;
+	border: 1px solid #d2d2d2; */
+	width: 200rpx;
+	height: 200rpx;
 	margin-right: 40rpx;
 }
 .goodsInr{
