--- a/pages/OrderList/OrderList.wxss
+++ b/pages/OrderList/OrderList.wxss
@@ -70,9 +70,11 @@
 	border-bottom: 1px solid #eeeeee;
 }
 .goodsImg{
-	width: 138rpx;
+	/* width: 138rpx;
 	height: 138rpx;
-	border: 1px solid #d2d2d2;
+	border: 1px solid #d2d2d2; */
+	width: 200rpx;
+	height: 200rpx;
 	margin-right: 40rpx;
 }
 .goodsInr{
