--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,6 +1,6 @@
 <view class='login' wx:if="{{canIUse}}">
     <view class='header'>
-        <!-- <image src='/static/images/login.png'></image> -->
+        <image src='/static/images/logo.png'></image>
     </view>
     <view>屹动</view>
     <view class='content'>
