--- a/pages/pinglun/pinglun.wxml
+++ b/pages/pinglun/pinglun.wxml
@@ -1,17 +1,31 @@
 <!--pages/pinglun/pinglun.wxml-->
+<wxs src="../../utils/filter.wxs" module="filter" />
 <view class="container contbox">
-	<view class=" dis_flex pb30 mb20 bgfff p20" wx:for="{{datalist}}">
-		<image class="plhaedimg" 
+	<view class=" dis_flex pb30 mb20 bgfff p20 w100 boxsiz" wx:for="{{datalist}}"
+		wx:for-index="idx"
+		wx:for-item="item" 
+		wx:key="idx">
+		<image lazy-load="true" class="plhaedimg" 
 		catchtap="previewImage"
-		data-src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1563957484276&di=052d557cdbc7daf8272249343c94faf2&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201805%2F13%2F20180513224039_tgfwu.png"
-		src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1563957484276&di=052d557cdbc7daf8272249343c94faf2&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201805%2F13%2F20180513224039_tgfwu.png"
+		data-src="{{item.avatarUrl}}"
+		src="{{item.avatarUrl}}"
 		></image>
 		<view class="flex_1">
 			<view class="fz26 c3 mb10 dis_flex ju_b">
-				<text>用户昵称123</text>
-				<text class="fz24 c9">2019年7月6日</text>
+				<text>{{item.nickName}}</text>
+				<text class="fz24 c9">{{filter.getDateTime(item.create_time)}}</text>
 			</view>
-			<view class="fz26 c9">这里是商品评价描述性文字这里是商品评价描述性文字这里是商品评价描述性文字……</view>
+			<view class="fz26 c9">{{item.comment}}</view>
+			<view wx:if="{{item.comment_img.length>0}}" class="imgbox">
+				<block wx:for="{{filter.getgimgarr(item.comment_img)}}"
+					wx:for-index="idx1"
+					wx:for-item="item1" 
+					wx:key="idx1">
+					<image lazy-load="true" class="{{filter.getgimgarr(item.comment_img).length==1 ? 'One':''}}" src="{{filter.imgIP(item1)}}"></image>
+				</block>
+				<!-- <image src="../../static/images/1.png"></image>
+				<image src="../../static/images/1.png"></image> -->
+			</view>
 		</view>
 	</view>
 </view>
