--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -1,4 +1,4 @@
-var imgip='http://xie.800123456.top/'
+var imgip ='http://xie.800123456.top:8000/'
 // filter.wxs
 var dateFormat = function(date) {
     var dates = date.split('/');
