--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -1,4 +1,5 @@
-var imgip ='http://xie.800123456.top:8000/'
+// var imgip ='http://xie.800123456.top:8000/'
+var imgip='https://yidong-sport.com/'
 // filter.wxs
 var dateFormat = function(date) {
     var dates = date.split('/');
