--- a/pages/OrderList/OrderList.wxml
+++ b/pages/OrderList/OrderList.wxml
@@ -15,7 +15,7 @@
 	</view>
 	
 	<view class="goodsBox w100" wx:if="{{type==idx0}}" wx:for="{{datalist}}" wx:for-index="idx0" wx:for-item="item0" wx:key="idx0">
-		<view class="zanwu" wx:if="{{goods.length==0}}">暂无内容</view>
+		<view class="zanwu" wx:if="{{goods[idx0].length==0}}">暂无内容</view>
 		<view class="goodsOne" wx:for="{{goods[idx0]}}"
 			wx:for-index="idx"
 			wx:for-item="item" 
