--- a/pages/myaddress/myaddress.wxss
+++ b/pages/myaddress/myaddress.wxss
@@ -26,7 +26,9 @@
 	display: flex;
 	align-items: center;
 	border-bottom: 1px solid #eee;
-	margin-bottom: 20rpx;
+	margin-bottom: 20rpx; 
+	word-wrap:break-word;
+word-break:break-all;
 }
 .addsetting{
 	width: 100%;
