--- a/app.wxss
+++ b/app.wxss
@@ -400,7 +400,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	zindex: 1;
+	z-index: 1;
 }
 .yhqinr{
 	width: 100%;
@@ -410,8 +410,14 @@
 	display: flex;
 	align-items: center;
 }
+.fz80{
+  font-size: 80rpx;
+}
 .letter-s20{
 	letter-spacing: -10rpx;
+}
+.letter-5{
+  letter-spacing: -5rpx;
 }
 .yhinr{
 	height: 100rpx;
