--- a/pages/guize/guize.wxml
+++ b/pages/guize/guize.wxml
@@ -1,3 +1,14 @@
 <!--pages/guize/guize.wxml-->
 <import src="../../vendor/wxParse/wxParse.wxml" />
-<view class='container'></view>
+<view class='container'>
+  <view class='w100'>
+    <view class='fz28 c3 w100 p20 boxsiz'>1.点击首页下方【立即抢购】按钮进入商品详情页
+    </view>
+    <view class='fz28 c3 w100 p20 boxsiz'>2.点击商品右侧【分享】按钮分享给好友
+    </view>
+    <view class='fz28 c3 w100 p20 boxsiz'>3.返回小程序【我的】查看【我的优惠券】
+    </view>
+    <view class='fz28 c9 w100 p20 boxsiz'>注：活动期间，每个人可通过分享两次获得两张优惠券，优惠券金额在50至100元之间。
+    </view>
+  </view>
+</view>
